--- a/app/content/supplier/names.yml
+++ b/app/content/supplier/names.yml
@@ -13,24 +13,18 @@ Names:
         validation: notBlank
         errorMessage: ""
         errorSummaryMessage: ""
-  Supplier description:
-    mockAnswer: "With over than 200.000 installations, Umbraco is one of the most deployed Web Content Management Systems on the Microsoft stack. It's in the top five most popular server applications and among the ten most popular open source tools in general."
-    fields:
-      - type: textarea
-        validation: notBlank
-        errorMessage: ""
-        errorSummaryMessage: ""
-  Website:
-    mockAnswer: "http://umbraco.com"
-    fields:
-      - type: text
-        validation: notBlank
-        errorMessage: ""
-        errorSummaryMessage: ""
   Registered address:
     mockAnswer: "125 West Street, City of Town, CT1 1AA"
     fields:
-      - type: textarea
+      - type: address
+        validation: notBlank
+        errorMessage: ""
+        errorSummaryMessage: ""
+  Contact address:
+    hint: "Optional. If you would prefer an alternative address to be included on your service listings, please provide details here."
+    mockAnswer: ""
+    fields:
+      - type: address
         validation: notBlank
         errorMessage: ""
         errorSummaryMessage: ""
