Implement full-width table for pricing matrix

--- a/app/content/service/pricing.yml
+++ b/app/content/service/pricing.yml
@@ -13,7 +13,7 @@ Pricing:
           - label: ""
             field:
               type: plaintext
-              text: "at"
+              text: "at £"
           - label: Unit price
             hint: "Eg 1.50, 75"
             field:
