--- a/app/content/service/open-source.yml
+++ b/app/content/service/open-source.yml
@@ -1,5 +1,5 @@
 Open source:
-  Is open source software used and supported?:
+  Open-source software used and supported:
     fields:
       - type: boolean
         validation: notBlank
