--- a/app/content/service/terms-and-conditions.yml
+++ b/app/content/service/terms-and-conditions.yml
@@ -1,11 +1,11 @@
 Terms and conditions:
-  Does your service charge a termination cost?:
+  Termination cost:
     fields:
       - type: boolean
         validation: notBlank
         errorMessage: ""
         errorSummaryMessage: ""
-  Does your service have a minimum contract period?:
+  Minimum contract period:
     fields:
       - type: boolean
         validation: notBlank
