--- a/app/content/supplier/esourcing.yml
+++ b/app/content/supplier/esourcing.yml
@@ -1,5 +1,5 @@
 eSourcing:
-  Have you completed the eSourcing process:
+  eSourcing process completed:
     mockAnswer: "Yes"
     fields:
       - type: boolean
