--- a/app/content/supplier/supplier-information.yml
+++ b/app/content/supplier/supplier-information.yml
@@ -1,6 +1,7 @@
 Supplier information:
   Supplier description:
-    mockAnswer: "With over than 200.000 installations, Umbraco is one of the most deployed Web Content Management Systems on the Microsoft stack. It's in the top five most popular server applications and among the ten most popular open source tools in general."
+    hint: Maximum 50 words 
+    mockAnswer: "With over 200.000 installations, Umbraco is one of the most deployed web content management systems on the Microsoft stack. It's in the top five most popular server applications and among the ten most popular open source tools in general."
     fields:
       - type: textarea
         validation: notBlank
@@ -35,7 +36,7 @@ Supplier information:
         errorMessage: ""
         errorSummaryMessage: ""
   Client list:
-    hint: These will be visible on your supplier page so please make sure you have approval.
+    hint: You can choose to include a list of clients you work with here. Any client listings you include will appear on your supplier page on the Digital Marketplace.
     mockAnswer: "DEFRA, Ministry of Justice, GDS"
     fields:
       - type: list
