--- a/app/content/supplier/terms-and-conditions.yml
+++ b/app/content/supplier/terms-and-conditions.yml
@@ -1,5 +1,5 @@
 Terms and conditions:
-  "If you have a terms and conditions document, upload it here":
+  "If you have a terms and conditions document for your service, upload it here":
     mockAnswer: Umbraco Terms_Conditions 102014.odf
     fields:
       - type: upload
