Add word count to textareas

--- a/app/content/service/service-description.yml
+++ b/app/content/service/service-description.yml
@@ -13,5 +13,6 @@ Service description:
     fields:
       - type: textarea
         validation: notBlank
+        maxLengthInWords: 50
         errorMessage: ""
         errorSummaryMessage: ""
