--- a/app/content/service/terms-and-conditions.yml
+++ b/app/content/service/terms-and-conditions.yml
@@ -11,3 +11,11 @@ Terms and conditions:
         validation: notBlank
         errorMessage: ""
         errorSummaryMessage: ""
+Terms and conditions document:
+  "If you have a terms and conditions document for your service, upload it here":
+    mockAnswer: Umbraco Terms_Conditions 102014.odf
+    fields:
+      - type: upload
+        validation: notBlank
+        errorMessage: ""
+        errorSummaryMessage: ""
