Got security questions appearing in the front end

--- a/app/content/service.yml
+++ b/app/content/service.yml
@@ -64,3 +64,45 @@
 - Page 22:
     name: Identity standards
     file: service/identity-standards.yml
+- Page 23:
+    name: 00
+    file: security/pages/00.yml
+- Page 24:
+    name: 01
+    file: security/pages/01.yml
+- Page 25:
+    name: 02
+    file: security/pages/02.yml
+- Page 26:
+    name: 03
+    file: security/pages/03.yml
+- Page 27:
+    name: 04
+    file: security/pages/04.yml
+- Page 28:
+    name: 05
+    file: security/pages/05.yml
+- Page 29:
+    name: 06
+    file: security/pages/06.yml
+- Page 30:
+    name: 07
+    file: security/pages/07.yml
+- Page 31:
+    name: 08
+    file: security/pages/08.yml
+- Page 32:
+    name: 09
+    file: security/pages/09.yml
+- Page 33:
+    name: 10
+    file: security/pages/10.yml
+- Page 34:
+    name: 11
+    file: security/pages/11.yml
+- Page 35:
+    name: 12
+    file: security/pages/12.yml
+- Page 36:
+    name: 13
+    file: security/pages/13.yml
