--- a/app/content/IaaS.yml
+++ b/app/content/IaaS.yml
@@ -1,6 +1,6 @@
 - Page 2:
     name: Service type
-    file: service/service-type.yml
+    file: service/service-type-IaaS.yml
 - Page 3:
     name: Service description
     file: service/service-description.yml
